init for Chroma

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "create-llama-study",
+  "name": "create-llama-ollama",
   "version": "0.1.0",
   "scripts": {
     "dev": "cross-env NEXT_PUBLIC_CHAT_API=http://localhost:8000/api/chat next dev",
