--- a/dockerfile-amd64
+++ b/dockerfile-amd64
@@ -1,4 +1,4 @@
-FROM debian:latest
+FROM --platform=linux/amd64 debian:latest
 
 RUN apt-get update
 RUN DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends tzdata
